<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:layout_margin="@dimen/margem">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nome"
        android:textSize="16sp"
        android:textColor="#FFFFFF"
        android:background="#0000FF"/>

    <EditText
        android:id="@+id/edtNome"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:inputType="textCapCharacters" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sexo"
        android:textSize="16sp"
        android:textColor="#FFFFFF"
        android:background="#0000FF"/>

    <RadioGroup
        android:id="@+id/rdgSexo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/rdbMasculino"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/masculino" />

        <RadioButton
            android:id="@+id/rdbFeminino"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Feminino" />
    </RadioGroup>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:textSize="16sp"
        android:textColor="#FFFFFF"
        android:background="#0000FF"/>

    <EditText
        android:id="@+id/edtEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/telefone"
        android:textSize="16sp"
        android:textColor="#FFFFFF"
        android:background="#0000FF"/>

    <EditText
        android:id="@+id/edtTelefone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="phone"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/preferencias"
        android:textSize="16sp"
        android:textColor="#0000FF"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
    <CheckBox
        android:id="@+id/chkMusica"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Musica"/>

    <CheckBox
        android:id="@+id/chkCinema"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Cinema"/>

    <CheckBox
        android:id="@+id/chkEsporte"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Esporte"/>

    <CheckBox
        android:id="@+id/chkGastronimia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Gastronomia"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/Notif"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Notif"
            android:textSize="16sp"
            android:textColor="#FFFFFF"
            android:background="#0000FF"/>

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/swtNotif"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textOff="@string/off"
            android:textOn="@string/on"/>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btnExibir"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/exibir"/>

        <Button
            android:id="@+id/btnLimpar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/limpar"/>



    </LinearLayout>

    <LinearLayout
        android:id="@+id/lblDados"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/darker_gray"
        android:orientation="vertical"
        android:padding="@dimen/margem"
        android:layout_marginTop="@dimen/margem"
        android:visibility="visible">

        <TextView
            android:id="@+id/txtNome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/txtEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/txtTelefone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>


        <TextView
            android:id="@+id/txtPeriodo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/txtPref"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>

</LinearLayout>